fixed all pages and aligned some text and fixed some padding errors on workhistory and projectspage

--- a/first-react-app/src/App.css
+++ b/first-react-app/src/App.css
@@ -9,7 +9,7 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 170px;
   padding: 20px;
   color: white;
 }
@@ -24,6 +24,7 @@
   padding-bottom: 18px;
   font-size: large;
 }
+
 
 nav {
   font-size: 25px;
@@ -46,6 +47,11 @@ nav {
   color: grey;
 }
 
+.workpagetest {
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
 #page-bg {
   background-image: url(http://getwallpapers.com/wallpaper/full/4/1/e/1042115-best-fairy-tail-logo-wallpaper-1920x1080-for-phones.jpg);
   height: 1000px;
@@ -63,17 +69,30 @@ h2 {
   font-weight: 900;
 }
 
+#header3 {
+  font-size: 18px;
+  font-weight: 900;
+  position: relative;
+  right: 15px;
+}
+
 h3 {
   font-size: 18px;
   font-weight: 900;
+  position: relative;
+  right: 10px;
 }
 
 #number {
   list-style-type: decimal;
   list-style-position: inside;
+  position: relative;
+  right: 35px;
 }
 
 #bullet {
+  position: relative;
+  right: 35px;
   list-style-position: inside;
   text-align: center;
 }
